[package]
name = "termpet"
description = "Simple terminal CLI game to take care of a virtual terminal pet, in development."
repository = "https://github.com/v1ctorio/tpet"

version = "0.0.1"
edition = "2021"
license = "MIT"


[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
pickledb = "0.5.1"
chrono = "0.4"
rand = "0.8.5"
